# xillion

./: .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yml
.github/workflows/: ci.yml
brokers/: _base.py  _dummy.py  backtest.py  paper.py  zerodha.py
docs/: 00-README.md  01-PRD.md  02-functional-requirements.md  03-architecture.md  04-plugin-contracts.md  05-data-model.md  06-ui-ux.md  07-risk-and-compliance.md  08-testing-strategy.md  09-progress-tracker.md  10-decisions-and-open-questions.md  11-go-live-checklist.md  12-user-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: backup_db.sh  import_csv.py  init_db.py  xillion.service
strategies/: _template.py  example_sma_cross.py
tests/: conftest.py
tests/integration/: test_sma_cross.py
tests/unit/: test_aggregator.py  test_events.py  test_plugin_loader.py  test_risk_manager.py
xillion/: cli.py  config.py  main.py
xillion/api/: auth.py  backtest.py  brokers.py  deps.py  health.py  instances.py  portfolio.py  risk.py  settings.py  strategies.py  trades.py  ws.py
xillion/auth/: credstore.py  password.py  session.py  totp.py
xillion/core/: audit.py  broker_base.py  events.py  execution.py  plugin_loader.py  risk.py  strategy_base.py
xillion/data/: aggregator.py  bus.py  history.py  repository.py
xillion/db/: models.py  session.py
xillion/engine/: backtest_engine.py  metrics.py  strategy_engine.py
(+22 files in other folders)
