[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xillion"
version = "0.1.0"
description = "Personal Algorithmic Trading Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "passlib[argon2]>=1.7.4",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
prod = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
xillion = "xillion.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["xillion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "B006"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
